--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tinymce/tinymce-react": "^4.3.0",
     "@types/react-datepicker": "^4.11.2",
     "axios": "^1.4.0",
     "chart.js": "^4.3.0",
     "formik": "^2.4.2",
+    "froala-editor": "^4.1.3",
     "lightgallery": "^2.7.1",
     "node-sass": "8.0.0",
     "p-min-delay": "^4.0.2",
@@ -50,6 +52,7 @@
     "redux-thunk": "^2.4.2",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.7.12",
+    "tinymce": "^6.7.2",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
   },
