--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dropzone-uploader": "^2.11.0",
     "react-form-stepper": "^2.0.3",
     "react-highlight": "^0.15.0",
+    "react-icons": "^4.12.0",
     "react-linear-gradient-picker": "^3.0.1",
     "react-modal": "^3.16.1",
     "react-multiselect-dropdown-bootstrap": "^1.1.0",
