--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-multiselect-dropdown-bootstrap": "^1.1.0",
     "react-redux": "^8.1.0",
     "react-resize-detector": "^9.1.0",
+    "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.13.0",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.9",
