--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chart.js": "^4.3.0",
     "formik": "^2.4.2",
     "froala-editor": "^4.1.3",
+    "jwt-decode": "^4.0.0",
     "lightgallery": "^2.7.1",
     "node-sass": "8.0.0",
     "p-min-delay": "^4.0.2",
