--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build PORT=3001",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "sass": "node-sass --watch src/scss/main.scss src/css/style.css --source-map src/css/style.css.map"
